feat: :sparkles: Add config to integrate with Seasons & Stars module

--- a/lang/en.json
+++ b/lang/en.json
@@ -424,6 +424,7 @@
   "SDM.erratic-expendables": " Erratic Expendables",
   "SDM.ErrorActorNoHeroDice": "{actor} has no hero dice available for this roll!",
   "SDM.ErrorCashManagementFailed": "An error has happened during cash transfer!",
+  "SDM.ErrorHallmarkExperience": "Hallmark item has invested experience",
   "SDM.ErrorHallmarkLimit": "This would exceed {target}'s hallmarks limit",
   "SDM.ErrorInvalidDiceFaces": "Invalid number of faces for a die: {faces}",
   "SDM.ErrorInvalidModifier": "Invalid roll modifier",
@@ -529,6 +530,7 @@
   "SDM.FieldWeeklyCost": "Total Cost (€) / Wk",
   "SDM.FieldWeeklySupply": "Total Supply / Wk",
   "SDM.ForceOrFail": "Sacrifice something to succeed",
+  "SDM.FormattedDate": "{weekday}, {month}/{day}/{year} ({season})",
   "SDM.FrequencyDay": "Day",
   "SDM.FrequencyWeek": "Week",
   "SDM.GearMaxPowers": "Max Stored Powers",
@@ -576,8 +578,11 @@
   "SDM.Item.View": "View",
   "SDM.ItemArmor": "Armor",
   "SDM.ItemArmorType": "Type",
+  "SDM.ItemCharges": "Charges",
   "SDM.ItemCost": "Unit Cost (€)",
+  "SDM.ItemCurrentCharges": "Current Charges",
   "SDM.ItemGearType": "Item Type",
+  "SDM.ItemMaxCharges": "Max Charges",
   "SDM.ItemMountCapacity": "Capacity",
   "SDM.ItemMountLevel": "Level",
   "SDM.ItemMountPulledVehicle": "Pulled Vehicle",
@@ -612,6 +617,9 @@
   "SDM.Menu.Baselines.Hint": "",
   "SDM.Menu.Baselines.Label": "Configure Baseline Settings",
   "SDM.Menu.Baselines.Name": "Baseline Settings",
+  "SDM.Menu.Calendar.Hint": "",
+  "SDM.Menu.Calendar.Label": "Configure Calendar Settings",
+  "SDM.Menu.Calendar.Name": "Calendar Settings",
   "SDM.Menu.Client.Hint": "Client specific settings like UI color and Shift+Click shortcut",
   "SDM.Menu.Client.Label": "Configure Client Settings",
   "SDM.Menu.Client.Name": "Client Settings",
@@ -634,19 +642,43 @@
   "SDM.MessageDamage": "Deals {damage} damage!",
   "SDM.MessageNoChanges": "No changes were needed",
   "SDM.MessageRolling": "Rolling",
-  "SDM.Month.1": "1 Newfirst - futile, arctic",
-  "SDM.Month.10": "10 Violetmonth - hard, wet",
-  "SDM.Month.11": "11 Snowbringer - grueling, freezing",
-  "SDM.Month.12": "12 Deadwinter - futile, glacial",
-  "SDM.Month.2": "2 Lastmonth - futile, gelid",
-  "SDM.Month.3": "3 Firstmonth - futile, cold, mud",
-  "SDM.Month.4": "4 Greenmonth - hard, cold, wet",
-  "SDM.Month.5": "5 Redmonth - easy",
-  "SDM.Month.6": "6 Orangemonth - easy",
-  "SDM.Month.7": "7 Yellowmonth - easy, hot",
-  "SDM.Month.8": "8 Oldsecond - easy, very hot",
-  "SDM.Month.9": "9 Unity - easy",
-  "SDM.MonthTrucking": "month - trucking",
+  "SDM.Month.1": "Newfirst",
+  "SDM.Month.10": "Violetmonth",
+  "SDM.Month.11": "Snowbringer",
+  "SDM.Month.12": "Deadwinter",
+  "SDM.Month.2": "Lastmonth",
+  "SDM.Month.3": "Firstmonth",
+  "SDM.Month.4": "Greenmonth",
+  "SDM.Month.5": "Redmonth",
+  "SDM.Month.6": "Orangemonth",
+  "SDM.Month.7": "Yellowmonth",
+  "SDM.Month.8": "Oldsecond",
+  "SDM.Month.9": "Unity",
+  "SDM.MonthShort.1": "New",
+  "SDM.MonthShort.10": "Vio",
+  "SDM.MonthShort.11": "Sno",
+  "SDM.MonthShort.12": "Dwi",
+  "SDM.MonthShort.2": "Las",
+  "SDM.MonthShort.3": "Fir",
+  "SDM.MonthShort.4": "Gre",
+  "SDM.MonthShort.5": "Red",
+  "SDM.MonthShort.6": "Ora",
+  "SDM.MonthShort.7": "Yel",
+  "SDM.MonthShort.8": "Old",
+  "SDM.MonthShort.9": "Uni",
+  "SDM.MonthTrucking.1": "1 Newfirst - futile, arctic",
+  "SDM.MonthTrucking.10": "10 Violetmonth - hard, wet",
+  "SDM.MonthTrucking.11": "11 Snowbringer - grueling, freezing",
+  "SDM.MonthTrucking.12": "12 Deadwinter - futile, glacial",
+  "SDM.MonthTrucking.2": "2 Lastmonth - futile, gelid",
+  "SDM.MonthTrucking.3": "3 Firstmonth - futile, cold, mud",
+  "SDM.MonthTrucking.4": "4 Greenmonth - hard, cold, wet",
+  "SDM.MonthTrucking.5": "5 Redmonth - easy",
+  "SDM.MonthTrucking.6": "6 Orangemonth - easy",
+  "SDM.MonthTrucking.7": "7 Yellowmonth - easy, hot",
+  "SDM.MonthTrucking.8": "8 Oldsecond - easy, very hot",
+  "SDM.MonthTrucking.9": "9 Unity - easy",
+  "SDM.MonthTruckingLabel": "month - trucking",
   "SDM.Morale": "Morale",
   "SDM.MoraleEqualOutcome": "Equal Morale",
   "SDM.MoraleEqualOutcomeMessage": "The NPC redoubles their effort, hoping a last push brings victory. They gain a bonus on their next action.",
@@ -771,6 +803,11 @@
   "SDM.SavingThrowSacrificeMessage": "Lose something precious to save.",
   "SDM.SavingThrowSave": "SAVE",
   "SDM.SavingThrowSaveMessage": "Disaster averted, fortune appeased.",
+  "SDM.Season.Autumn": "Autumn",
+  "SDM.Season.Spring": "Spring",
+  "SDM.Season.Summer": "Summer",
+  "SDM.Season.Winter": "Winter",
+  "SDM.seasonsStarsIntegrationError": "Make sure to install and enable the modules \"Seasons & Stars\" and \"Seasons & Stars: SDM\"",
   "SDM.SelectCharacter": "Select Character",
   "SDM.SelectResource": "Select Resource",
   "SDM.SetBonusHeroDice": "Set Bonus Hero Dice Pool",
@@ -831,6 +868,8 @@
   "SDM.SettingsReverseShiftKeyHint": "Reverse Shift+Click behavior in roll buttons.\nWhen enabled, using Shift+Click will be required to open custom roll dialogs.",
   "SDM.SettingsSavingThrowBaseRollFormula": "Base saving throw roll formula",
   "SDM.SettingsSavingThrowBaseRollFormulaHint": "Base roll formula for all saving throw rolls",
+  "SDM.SettingsSeasonStarsIntegration": "Integration with Seasons & Stars module",
+  "SDM.SettingsSeasonStarsIntegrationHint": "Enable integration with the calendar module Seasons & Stars",
   "SDM.SettingsShouldPlayLevelUpSoundFx": "Play Level Up Sound Effect",
   "SDM.SettingsShouldPlayLevelUpSoundFxHint": "Plays a sound effect when a character levels up",
   "SDM.SettingsSkillModifierStep": "Skill Rank Increment",
@@ -941,11 +980,24 @@
   "SDM.WeaponRange": "Range",
   "SDM.WeaponVersatile": "Versatile",
   "SDM.WeaponVersatileDamage": "Versatile Damage",
+  "SDM.WeekDay.0": "Monday",
+  "SDM.WeekDay.1": "Tuesday",
+  "SDM.WeekDay.2": "Wednesday",
+  "SDM.WeekDay.3": "Thursday",
+  "SDM.WeekDay.4": "Friday",
+  "SDM.WeekDay.5": "Saturday",
+  "SDM.WeekDay.6": "Sunday",
+  "SDM.WeekDayShort.0.": "Mon",
+  "SDM.WeekDayShort.1": "Tue",
+  "SDM.WeekDayShort.2": "Wed",
+  "SDM.WeekDayShort.3": "Thu",
+  "SDM.WeekDayShort.4": "Fri",
+  "SDM.WeekDayShort.5": "Sat",
+  "SDM.WeekDayShort.6": "Sun",
   "SDM.Weeks": "weeks",
   "SDM.Wiki": "Wiki",
   "SDM.WithoutRollingDice": "to increase Bonus Hero Dice Pool",
   "SDM.XPToGive": "XP to Give",
-  "SMD.ErrorHallmarkExperience": "Hallmark item has invested experience",
   "TYPE.Burden": "Burden",
   "TYPE.Effect": "Effect",
   "TYPE.Gear": "Gear",
