--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -424,6 +424,7 @@
   "SDM.erratic-expendables": "Descartáveis Erráticos",
   "SDM.ErrorActorNoHeroDice": "{actor} não tem dados heróicos para esta rolagem!",
   "SDM.ErrorCashManagementFailed": "Erro durante transferência de dinheiro!",
+  "SDM.ErrorHallmarkExperience": "Este item emblemático possui experiência investida",
   "SDM.ErrorHallmarkLimit": "Isto excederia o limite de itens emblemáticos de {target}",
   "SDM.ErrorInvalidDiceFaces": "Número inválido de lados para dado: {faces}",
   "SDM.ErrorInvalidModifier": "Modificador de rolagem inválido",
@@ -529,6 +530,7 @@
   "SDM.FieldWeeklyCost": "Custo (€) / Semana",
   "SDM.FieldWeeklySupply": "Suprimento / Semana",
   "SDM.ForceOrFail": "Sacrifique algo ou falhe",
+  "SDM.FormattedDate": "{weekday}, {day}/{month}/{year} ({season})",
   "SDM.FrequencyDay": "Dia",
   "SDM.FrequencyWeek": "Semana",
   "SDM.GearMaxPowers": "Máximo de Poderes",
@@ -576,8 +578,11 @@
   "SDM.Item.View": "Visualizar",
   "SDM.ItemArmor": "Armadura",
   "SDM.ItemArmorType": "Tipo",
+  "SDM.ItemCharges": "Cargas",
   "SDM.ItemCost": "Custo Unitário (€)",
+  "SDM.ItemCurrentCharges": "Cargas Atuais",
   "SDM.ItemGearType": "Tipo de Item",
+  "SDM.ItemMaxCharges": "Máx Cargas",
   "SDM.ItemMountCapacity": "Capacidade",
   "SDM.ItemMountLevel": "Nível",
   "SDM.ItemMountPulledVehicle": "Veículo de Tração",
@@ -612,6 +617,9 @@
   "SDM.Menu.Baselines.Hint": "",
   "SDM.Menu.Baselines.Label": "Configurar Valores Base",
   "SDM.Menu.Baselines.Name": "Configurações de Valores Base",
+  "SDM.Menu.Calendar.Hint": "",
+  "SDM.Menu.Calendar.Label": "Configurar Calendário",
+  "SDM.Menu.Calendar.Name": "Configurações de Calendário",
   "SDM.Menu.Client.Hint": "Configurações específicas do usuário, como cor da interface e atalho Shift+Click",
   "SDM.Menu.Client.Label": "Configurar Opções do Usuário",
   "SDM.Menu.Client.Name": "Configurações do Usuário",
@@ -634,19 +642,43 @@
   "SDM.MessageDamage": "Causa {damage} de dano!",
   "SDM.MessageNoChanges": "Nenhuma alteração necessária",
   "SDM.MessageRolling": "Rolando",
-  "SDM.Month.1": "1 Primus - praticamente impossível, ártico",
-  "SDM.Month.10": "10 Roxomês - desafiador, úmido",
-  "SDM.Month.11": "11 Trazneve - exaustivo, gélido",
-  "SDM.Month.12": "12 Invermorto - praticamente impossível, glacial",
-  "SDM.Month.2": "2 Últimês - praticamente impossível, gélido",
-  "SDM.Month.3": "3 Primês - praticamente impossível, frio, lama",
-  "SDM.Month.4": "4 Verdemês - desafiador, frio, úmido",
-  "SDM.Month.5": "5 Vermelhomês - fácil",
-  "SDM.Month.6": "6 Laranjamês - fácil",
-  "SDM.Month.7": "7 Amarelomês - fácil, quente",
-  "SDM.Month.8": "8 Segundovelho - fácil, muito quente",
-  "SDM.Month.9": "9 União - fácil",
-  "SDM.MonthTrucking": "mês - condições de estrada",
+  "SDM.Month.1": "Primus",
+  "SDM.Month.10": "Roxomês",
+  "SDM.Month.11": "Trazneve",
+  "SDM.Month.12": "Invermorto",
+  "SDM.Month.2": "Últimês",
+  "SDM.Month.3": "Primês",
+  "SDM.Month.4": "Verdemês",
+  "SDM.Month.5": "Vermelhomês",
+  "SDM.Month.6": "Laranjamês",
+  "SDM.Month.7": "Amarelomês",
+  "SDM.Month.8": "Segundovelho",
+  "SDM.Month.9": "União",
+  "SDM.MonthShort.1": "Pmu",
+  "SDM.MonthShort.10": "Rox",
+  "SDM.MonthShort.11": "Trz",
+  "SDM.MonthShort.12": "Inv",
+  "SDM.MonthShort.2": "Ult",
+  "SDM.MonthShort.3": "Pme",
+  "SDM.MonthShort.4": "Vrd",
+  "SDM.MonthShort.5": "Vrm",
+  "SDM.MonthShort.6": "Lar",
+  "SDM.MonthShort.7": "Ama",
+  "SDM.MonthShort.8": "Sgv",
+  "SDM.MonthShort.9": "Uni",
+  "SDM.MonthTrucking.1": "1 Primus - praticamente impossível, ártico",
+  "SDM.MonthTrucking.10": "10 Roxomês - desafiador, úmido",
+  "SDM.MonthTrucking.11": "11 Trazneve - exaustivo, gélido",
+  "SDM.MonthTrucking.12": "12 Invermorto - praticamente impossível, glacial",
+  "SDM.MonthTrucking.2": "2 Últimês - praticamente impossível, gélido",
+  "SDM.MonthTrucking.3": "3 Primês - praticamente impossível, frio, lama",
+  "SDM.MonthTrucking.4": "4 Verdemês - desafiador, frio, úmido",
+  "SDM.MonthTrucking.5": "5 Vermelhomês - fácil",
+  "SDM.MonthTrucking.6": "6 Laranjamês - fácil",
+  "SDM.MonthTrucking.7": "7 Amarelomês - fácil, quente",
+  "SDM.MonthTrucking.8": "8 Segundovelho - fácil, muito quente",
+  "SDM.MonthTrucking.9": "9 União - fácil",
+  "SDM.MonthTruckingLabel": "mês - condições de estrada",
   "SDM.Morale": "Moral",
   "SDM.MoraleEqualOutcome": "Igual ao Moral",
   "SDM.MoraleEqualOutcomeMessage": "O NPC redobra os esforços, apostando que um último impulso trará a vitória. Recebe um bônus em sua próxima ação.",
@@ -771,6 +803,11 @@
   "SDM.SavingThrowSacrificeMessage": "Perca algo valioso para se salvar.",
   "SDM.SavingThrowSave": "SE SALVOU",
   "SDM.SavingThrowSaveMessage": "Desastre evitado, fortuna apaziguada.",
+  "SDM.Season.Autumn": "Outono",
+  "SDM.Season.Spring": "Primavera",
+  "SDM.Season.Summer": "Verão",
+  "SDM.Season.Winter": "Inverno",
+  "SDM.seasonsStarsIntegrationError": "É necessário instalar e habilitar os módulos \"Seasons & Stars\" e \"Seasons & Stars: SDM\"",
   "SDM.SelectCharacter": "Selecionar Personagem",
   "SDM.SelectResource": "Selecione o Recurso",
   "SDM.SetBonusHeroDice": "Modificar parada Bônus de Dados Heróicos",
@@ -831,6 +868,8 @@
   "SDM.SettingsReverseShiftKeyHint": "Reverte o funcionamento da tecla Shift em botões de rolagem.\n Marcar esta opção exigirá Shift+click para abrir diálogos de rolagem personalizados",
   "SDM.SettingsSavingThrowBaseRollFormula": "Fórmula base para Salvaguardas",
   "SDM.SettingsSavingThrowBaseRollFormulaHint": "Fórmula padrão para rolagens de Salvaguarda",
+  "SDM.SettingsSeasonStarsIntegration": "Integração com o módulo Seasons & Stars",
+  "SDM.SettingsSeasonStarsIntegrationHint": "Habilita integração com o módulo de calendário Seasons & Stars",
   "SDM.SettingsShouldPlayLevelUpSoundFx": "Tocar efeito sonoro ao subir de nível",
   "SDM.SettingsShouldPlayLevelUpSoundFxHint": "Habilita a reprodução de um efeito sonoro quando personagens sobem de nível",
   "SDM.SettingsSkillModifierStep": "Modificador de Perícias",
@@ -941,11 +980,24 @@
   "SDM.WeaponRange": "Alcance",
   "SDM.WeaponVersatile": "Versátil",
   "SDM.WeaponVersatileDamage": "Dano versátil",
+  "SDM.WeekDay.0": "Segunda-feira",
+  "SDM.WeekDay.1": "Terça-feira",
+  "SDM.WeekDay.2": "Quarta-feira",
+  "SDM.WeekDay.3": "Quinta-feira",
+  "SDM.WeekDay.4": "Sexta-feira",
+  "SDM.WeekDay.5": "Sábado",
+  "SDM.WeekDay.6": "Domingo",
+  "SDM.WeekDayShort.0": "Seg",
+  "SDM.WeekDayShort.1": "Ter",
+  "SDM.WeekDayShort.2": "Qua",
+  "SDM.WeekDayShort.3": "Qui",
+  "SDM.WeekDayShort.4": "Sex",
+  "SDM.WeekDayShort.5": "Sab",
+  "SDM.WeekDayShort.6": "Dom",
   "SDM.Weeks": "semanas",
   "SDM.Wiki": "Wiki",
   "SDM.WithoutRollingDice": "para aumentar a parada bônus de Dados Heróicos",
   "SDM.XPToGive": "EXP para Distribuir",
-  "SMD.ErrorHallmarkExperience": "Este item emblemático possui experiência investida",
   "TYPE.Burden": "Fardo",
   "TYPE.Effect": "Efeito",
   "TYPE.Gear": "Equipamento",
