feat: :sparkles: Add context menu option to add and remove item charges

--- a/lang/en.json
+++ b/lang/en.json
@@ -563,12 +563,14 @@
   "SDM.InventoryTraits": "Traits",
   "SDM.Issues": "Issues",
   "SDM.IsSupply": "Is Supply",
+  "SDM.Item.AddOneCharge": "+1 Charge",
   "SDM.Item.Broken": "Mark as Broken",
   "SDM.Item.ConsumeSupply": "Consume Supply",
   "SDM.Item.Delete": "Delete",
   "SDM.Item.MergeItems": "Merge Items",
   "SDM.Item.Notched": "Mark as Notched",
   "SDM.Item.Recharge": "Recharge",
+  "SDM.Item.RemoveOneCharge": "-1 Charge",
   "SDM.Item.Repair": "Repair",
   "SDM.Item.RunningLow": "Mark as Running Low",
   "SDM.Item.RunOut": "Mark as Run Out",
