--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -563,12 +563,14 @@
   "SDM.InventoryTraits": "Traços",
   "SDM.Issues": "Problemas",
   "SDM.IsSupply": "É Suprimento",
+  "SDM.Item.AddOneCharge": "+1 Carga",
   "SDM.Item.Broken": "Marcar como Quebrado",
   "SDM.Item.ConsumeSupply": "Consumir Suprimento",
   "SDM.Item.Delete": "Excluir",
   "SDM.Item.MergeItems": "Juntar Itens",
   "SDM.Item.Notched": "Marcar como Danificado",
   "SDM.Item.Recharge": "Recarregar",
+  "SDM.Item.RemoveOneCharge": "-1 Carga",
   "SDM.Item.Repair": "Reparar",
   "SDM.Item.RunningLow": "Marcar como Acabando",
   "SDM.Item.RunOut": "Marcar como Esgotado",
