feat: :sparkles: Add new roll_mode key to active effects changes

--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -358,21 +358,27 @@
   "SDM.EffectPassive": "Efeitos Passivos",
   "SDM.EffectsLabel.system.abilities.agi.bonus": "Bônus de Rapidez",
   "SDM.EffectsLabel.system.abilities.agi.roll_bonus": "Bônus para testes relacionados à Rapidez",
+  "SDM.EffectsLabel.system.abilities.agi.roll_mode": "Tipo de rolagem padrão para rapidez e salvaguarda de rap (sobrepor com: advantage ou disadvantage)",
   "SDM.EffectsLabel.system.abilities.agi.save_bonus": "Bônus para Salvaguarda de Rapidez",
   "SDM.EffectsLabel.system.abilities.aur.bonus": "Bônus de Aura",
   "SDM.EffectsLabel.system.abilities.aur.roll_bonus": "Bônus para testes relacionados à Aura",
+  "SDM.EffectsLabel.system.abilities.aur.roll_mode": "Tipo de rolagem padrão para aura e salvaguarda de aur (sobrepor com: advantage ou disadvantage)",
   "SDM.EffectsLabel.system.abilities.aur.save_bonus": "Bônus para Salvaguarda de Aura",
   "SDM.EffectsLabel.system.abilities.cha.bonus": "Bônus de Carisma",
   "SDM.EffectsLabel.system.abilities.cha.roll_bonus": "Bônus em testes relacionados ao Carisma",
+  "SDM.EffectsLabel.system.abilities.cha.roll_mode": "Tipo de rolagem padrão para carisma, salvaguarda de car e reações (sobrepor com: advantage ou disadvantage)",
   "SDM.EffectsLabel.system.abilities.cha.save_bonus": "Bônus para Salvaguarda de Carisma",
   "SDM.EffectsLabel.system.abilities.end.bonus": "Bônus de Resistência",
   "SDM.EffectsLabel.system.abilities.end.roll_bonus": "Bônus para testes relacionados à Resistência",
+  "SDM.EffectsLabel.system.abilities.end.roll_mode": "Tipo de rolagem padrão para resistência e salvaguarda de res (sobrepor com: advantage ou disadvantage)",
   "SDM.EffectsLabel.system.abilities.end.save_bonus": "Bônus para Salvaguarda de Resistência",
   "SDM.EffectsLabel.system.abilities.str.bonus": "Bônus de Força",
   "SDM.EffectsLabel.system.abilities.str.roll_bonus": "Bônus em testes relacionados à Força",
+  "SDM.EffectsLabel.system.abilities.str.roll_mode": "Tipo de rolagem padrão para força e salvaguarda de for (sobrepor com: advantage ou disadvantage)",
   "SDM.EffectsLabel.system.abilities.str.save_bonus": "Bônus para Salvaguarda de Força",
   "SDM.EffectsLabel.system.abilities.tho.bonus": "Bônus de Inteligência",
   "SDM.EffectsLabel.system.abilities.tho.roll_bonus": "Bônus em testes relacionados a Inteligência",
+  "SDM.EffectsLabel.system.abilities.tho.roll_mode": "Tipo de rolagem padrão para inteligência e salvaguarda de int (sobrepor com: advantage ou disadvantage)",
   "SDM.EffectsLabel.system.abilities.tho.save_bonus": "Bônus para Salvaguarda de Inteligência",
   "SDM.EffectsLabel.system.all_save_bonus": "Bônus para todas as rolagens de salvaguarda",
   "SDM.EffectsLabel.system.armor_bonus": "Bônus de armadura",
@@ -389,20 +395,24 @@
   "SDM.EffectsLabel.system.damage_bonus": "Dano bônus adicionado a todas as jogadas de dano de arma, poder e álbum de poder",
   "SDM.EffectsLabel.system.defense_bonus": "Bônus de defesa física",
   "SDM.EffectsLabel.system.fantascience.bonus": "Bônus de ataque com fantasciência",
+  "SDM.EffectsLabel.system.fantascience.roll_mode": "Tipo de rolagem padrão para ataques de fantasciência (sobrepor com: advantage ou disadvantage)",
   "SDM.EffectsLabel.system.hero_dice.bonus": "Dados heróicos extras (aumenta o número máximo de dados heróicos)",
-  "SDM.EffectsLabel.system.hero_dice.dice_type": "Tipo de dado heróico (sobrescreve com: d4, d6, d8, d10, d12 ou d20)",
+  "SDM.EffectsLabel.system.hero_dice.dice_type": "Tipo de dado heróico (sobrepor com: d4, d6, d8, d10, d12 ou d20)",
   "SDM.EffectsLabel.system.initiative_bonus": "Bônus de iniciativa",
   "SDM.EffectsLabel.system.item_slots_bonus": "Afeta o número de espaços para itens",
   "SDM.EffectsLabel.system.life.bonus": "Bônus de vida",
   "SDM.EffectsLabel.system.melee.bonus": "Bônus de ataque corpo a corpo",
+  "SDM.EffectsLabel.system.melee.roll_mode": "Tipo de rolagem padrão para ataques corpo a corpo (sobrepor com: advantage ou disadvantage)",
   "SDM.EffectsLabel.system.mental_defense_bonus": "Bônus de defesa mental",
   "SDM.EffectsLabel.system.oldtech.bonus": "Bônus de ataque com velhatec",
+  "SDM.EffectsLabel.system.oldtech.roll_mode": "Tipo de rolagem padrão para ataques de velhatec (sobrepor com: advantage ou disadvantage)",
   "SDM.EffectsLabel.system.packed_item_slots_bonus": "Número de itens empacotados (não equipados) que não ocupam espaços",
   "SDM.EffectsLabel.system.power_cost": "Custo de poderes",
   "SDM.EffectsLabel.system.power_cost_bonus": "Valor do bônus (número positivo) deduzido do custo total de todos os poderes",
   "SDM.EffectsLabel.system.power_slots_bonus": "Número de poderes que não ocupam espaços de itens ou traços",
   "SDM.EffectsLabel.system.prestige": "Bônus de prestígio (defesa social)",
   "SDM.EffectsLabel.system.ranged.bonus": "Bônus de ataque à distância",
+  "SDM.EffectsLabel.system.ranged.roll_mode": "Tipo de rolagem padrão para ataques à distância (sobrepor com: advantage ou disadvantage)",
   "SDM.EffectsLabel.system.reaction_bonus": "Bônus de reação",
   "SDM.EffectsLabel.system.readied_armor_take_no_slots": "Armaduras equipadas não ocupam slots de itens. Propriedade booleana, use 'Mudar o Modo' Sobrepor",
   "SDM.EffectsLabel.system.readied_item_slots_bonus": "Número de itens equipados que não ocupam espaços de inventário",
@@ -782,7 +792,7 @@
   "SDM.Result": "Resultado",
   "SDM.RollAdvantage": "vantagem",
   "SDM.RollAdvantageAbbr": "↑v",
-  "SDM.RollDiceTotal": "Total de Dados",
+  "SDM.RollDiceTotal": "Total dos Dados",
   "SDM.RollDisadvantage": "desvantagem",
   "SDM.RollDisadvantageAbbr": "↓d",
   "SDM.RollExplosion": "Explosão",
@@ -813,8 +823,12 @@
   "SDM.SelectCharacter": "Selecionar Personagem",
   "SDM.SelectResource": "Selecione o Recurso",
   "SDM.SetBonusHeroDice": "Modificar parada Bônus de Dados Heróicos",
+  "SDM.Settings.AudioNotSupported": "Seu navegador não suporta o elemento de áudio.",
+  "SDM.Settings.AudioPlayError": "Não foi possível reproduzir o arquivo de áudio",
+  "SDM.Settings.PlayPreview": "Reproduzir prévia",
   "SDM.Settings.ResetDefaults.Confirm": "Redefinir todos os campos deste seção para seus valores padrão?",
   "SDM.Settings.ResetDefaults.Title": "Redefinir Configurações",
+  "SDM.Settings.VideoNotSupported": "Seu navegador não suporta o elemento de vídeo.",
   "SDM.SettingsBaseBurdenSlots": "Espaços de Fardos Base",
   "SDM.SettingsBaseBurdenSlotsHint": "Número base de espaços de inventário para fardos",
   "SDM.SettingsBaseDefense": "Defesa Inicial",
