--- a/lang/en.json
+++ b/lang/en.json
@@ -358,21 +358,27 @@
   "SDM.EffectPassive": "Passive Effects",
   "SDM.EffectsLabel.system.abilities.agi.bonus": "Agility Bonus",
   "SDM.EffectsLabel.system.abilities.agi.roll_bonus": "Bonus to Agility related rolls",
+  "SDM.EffectsLabel.system.abilities.agi.roll_mode": "Default roll type for agility and agi save rolls (override with: advantage or disadvantage)",
   "SDM.EffectsLabel.system.abilities.agi.save_bonus": "Bonus to Agility Saving Throw",
   "SDM.EffectsLabel.system.abilities.aur.bonus": "Aura Bonus",
   "SDM.EffectsLabel.system.abilities.aur.roll_bonus": "Bonus to Aura related rolls",
+  "SDM.EffectsLabel.system.abilities.aur.roll_mode": "Default roll type for aura and aur save rolls (override with: advantage or disadvantage)",
   "SDM.EffectsLabel.system.abilities.aur.save_bonus": "Bonus to Aura Saving Throw",
   "SDM.EffectsLabel.system.abilities.cha.bonus": "Charisma Bonus",
   "SDM.EffectsLabel.system.abilities.cha.roll_bonus": "Bonus to Charisma related rolls",
+  "SDM.EffectsLabel.system.abilities.cha.roll_mode": "Default roll type for charisma, cha save and reaction rolls (override with: advantage or disadvantage)",
   "SDM.EffectsLabel.system.abilities.cha.save_bonus": "Bonus to Charisma Saving Throw",
   "SDM.EffectsLabel.system.abilities.end.bonus": "Endurance Bonus",
   "SDM.EffectsLabel.system.abilities.end.roll_bonus": "Bonus to Endurance related rolls",
+  "SDM.EffectsLabel.system.abilities.end.roll_mode": "Default roll type for endurance and end save rolls (override with: advantage or disadvantage)",
   "SDM.EffectsLabel.system.abilities.end.save_bonus": "Bonus to Endurance Saving Throw",
   "SDM.EffectsLabel.system.abilities.str.bonus": "Strength Bonus",
   "SDM.EffectsLabel.system.abilities.str.roll_bonus": "Bonus to Strength related rolls",
+  "SDM.EffectsLabel.system.abilities.str.roll_mode": "Default roll type for strength and str save rolls (override with: advantage or disadvantage)",
   "SDM.EffectsLabel.system.abilities.str.save_bonus": "Bonus to Strength Saving Throw",
   "SDM.EffectsLabel.system.abilities.tho.bonus": "Thought Bonus",
   "SDM.EffectsLabel.system.abilities.tho.roll_bonus": "Bonus to Thought related rolls",
+  "SDM.EffectsLabel.system.abilities.tho.roll_mode": "Default roll type for thought and tho save rolls (override with: advantage or disadvantage)",
   "SDM.EffectsLabel.system.abilities.tho.save_bonus": "Bonus to Thought Saving Throw",
   "SDM.EffectsLabel.system.all_save_bonus": "Bonus to all saving throw rolls",
   "SDM.EffectsLabel.system.armor_bonus": "Armor Bonus",
@@ -389,20 +395,24 @@
   "SDM.EffectsLabel.system.damage_bonus": "Bonus damage added to all weapon, power and album of power damage rolls",
   "SDM.EffectsLabel.system.defense_bonus": "Physical defense bonus",
   "SDM.EffectsLabel.system.fantascience.bonus": "Fantascience attack bonus",
+  "SDM.EffectsLabel.system.fantascience.roll_mode": "Default roll type for oldtech attacks (override with: advantage or disadvantage)",
   "SDM.EffectsLabel.system.hero_dice.bonus": "Extra hero dice (increases the max number of hero dice)",
   "SDM.EffectsLabel.system.hero_dice.dice_type": "Hero dice type, override with: (d4, d6, d8, d10, d12 or d20)",
   "SDM.EffectsLabel.system.initiative_bonus": "Initiative bonus",
   "SDM.EffectsLabel.system.item_slots_bonus": "Affects the number of item slots",
   "SDM.EffectsLabel.system.life.bonus": "Life Bonus",
   "SDM.EffectsLabel.system.melee.bonus": "Melee attack bonus",
+  "SDM.EffectsLabel.system.melee.roll_mode": "Default roll type for melee attacks (override with: advantage or disadvantage)",
   "SDM.EffectsLabel.system.mental_defense_bonus": "Mental defense bonus",
   "SDM.EffectsLabel.system.oldtech.bonus": "Oldtech attack bonus",
+  "SDM.EffectsLabel.system.oldtech.roll_mode": "Default roll type for oldtech attacks (override with: advantage or disadvantage)",
   "SDM.EffectsLabel.system.packed_item_slots_bonus": "Number of packade items (not readied items) that won't take item slots",
   "SDM.EffectsLabel.system.power_cost": "Power Cost",
   "SDM.EffectsLabel.system.power_cost_bonus": "Bonus value (positive number) deducted from all powers total cost",
   "SDM.EffectsLabel.system.power_slots_bonus": "Number of powers that won't take either item or trait slots",
   "SDM.EffectsLabel.system.prestige": "Prestige bonus (social defense)",
   "SDM.EffectsLabel.system.ranged.bonus": "Ranged attack bonus",
+  "SDM.EffectsLabel.system.ranged.roll_mode": "Default roll type for ranged attacks (override with: advantage or disadvantage)",
   "SDM.EffectsLabel.system.reaction_bonus": "Reaction Bonus",
   "SDM.EffectsLabel.system.readied_armor_take_no_slots": "Readied armor take no item slots. Boolean property, use change mode Override",
   "SDM.EffectsLabel.system.readied_item_slots_bonus": "Number of readied items that won't take item slots",
@@ -813,8 +823,12 @@
   "SDM.SelectCharacter": "Select Character",
   "SDM.SelectResource": "Select Resource",
   "SDM.SetBonusHeroDice": "Set Bonus Hero Dice Pool",
+  "SDM.Settings.AudioNotSupported": "Your browser does not support the audio element.",
+  "SDM.Settings.AudioPlayError": "Could not play audio file",
+  "SDM.Settings.PlayPreview": "Play preview",
   "SDM.Settings.ResetDefaults.Confirm": " Reset all fields in this section to their default values?",
   "SDM.Settings.ResetDefaults.Title": "Reset Settings",
+  "SDM.Settings.VideoNotSupported": "Your browser does not support the video element.",
   "SDM.SettingsBaseBurdenSlots": "Base Burden Slots",
   "SDM.SettingsBaseBurdenSlotsHint": "Base number of burden slots for a character",
   "SDM.SettingsBaseDefense": "Base Defense",
