feat: :sparkles: Add defeat and corruption to character sheet

--- a/lang/en.json
+++ b/lang/en.json
@@ -326,7 +326,20 @@
   "SDM.CombatantsExcluded": "Excluded from combat: {names}",
   "SDM.ConsumeSupply": "Consume Supplies",
   "SDM.ConsumeSupplyHint": "Weekly Required Supplies",
+  "SDM.Corruption": "Corruption",
+  "SDM.CorruptionExposureSeverity": "Corruption Exposure Severity",
+  "SDM.CorruptionMessage11to12": "Roll the @UUID[Compendium.sdm.corruption.RollTable.a3v2H3P6olAzWHwS]{Mild Corruption} table",
+  "SDM.CorruptionMessage13plus": "and you regain the price you paid for the power. Roll the @UUID[Compendium.sdm.corruption.RollTable.a3v2H3P6olAzWHwS]{Mild Corruption} table",
+  "SDM.CorruptionMessage2less": "Head explodes (or something equally memorable), but the corruption keeps you alive until you die of hunger. Your mind-personality complex (ka-ba) is conscious throughout.\nAlso, roll the @UUID[Compendium.sdm.corruption.RollTable.BBgSMXyZ7cPuZuCM]{Severe Corruption} table.",
+  "SDM.CorruptionMessage3to6": "Roll the @UUID[Compendium.sdm.corruption.RollTable.BBgSMXyZ7cPuZuCM]{Severe Corruption} table",
+  "SDM.CorruptionMessage7to10": "Roll the @UUID[Compendium.sdm.corruption.RollTable.grc8rMrojT8de6Ve]{Moderate Corruption} table",
+  "SDM.CorruptionOutcome11to12": "Mild exposure.",
+  "SDM.CorruptionOutcome13plus": "Mild exposure",
+  "SDM.CorruptionOutcome2less": "Unexpected amplification.",
+  "SDM.CorruptionOutcome3to6": "Severe exposure.",
+  "SDM.CorruptionOutcome7to10": "Moderate exposure.",
   "SDM.Cost": "Cost",
+  "SDM.CreateCorruptionItem": "Create Corruption as",
   "SDM.CreateNPC": "Create NPC",
   "SDM.CreatePowerItem": "Create Power as",
   "SDM.CreateRandomNPC": "NPC Generator",
@@ -338,6 +351,26 @@
   "SDM.Damage": "Damage",
   "SDM.darting-dodgers": "Darting Dodgers",
   "SDM.DefaultAbility": "Default Ability",
+  "SDM.Defeat": "Defeat",
+  "SDM.DefeatAbilityAura": "Aura (mental damage)",
+  "SDM.DefeatAbilityEndurance": "Endurance (physical damage)",
+  "SDM.DefeatMessage1": "The character is gone for at least the rest of this session, barring eerie divinitechnologies.",
+  "SDM.DefeatMessage10": "Defacing (-1 charisma) burden. Lose next turn, then regain 1 life.",
+  "SDM.DefeatMessage11": "Lose next turn, then regain 1 life.",
+  "SDM.DefeatMessage12plus": "Immediately regain 1 life.",
+  "SDM.DefeatMessage2to6": "Requires relife intervention to rebuild their body (ha) or personality (ba).",
+  "SDM.DefeatMessage7": "Brain injury (-1 thought) burden. See you at the end of the fight.",
+  "SDM.DefeatMessage8": "Weakness (-1 strength) burden. Lose next turn, then regain 1 life.",
+  "SDM.DefeatMessage9": "Nauseating (-1 agility) burden. Lose next turn, then regain 1 life.",
+  "SDM.DefeatOutcome1": "Destroyed",
+  "SDM.DefeatOutcome10": "Scarred",
+  "SDM.DefeatOutcome11": "Stunned",
+  "SDM.DefeatOutcome12plus": "All ok!",
+  "SDM.DefeatOutcome2to6": "Dead",
+  "SDM.DefeatOutcome7": "Knocked out",
+  "SDM.DefeatOutcome8": "Winded",
+  "SDM.DefeatOutcome9": "Strained",
+  "SDM.DefeatRoll": "Roll Defeat Table",
   "SDM.DeleteDocConfirmation": "Delete {doc} permanently?",
   "SDM.DeletePower": "Delete Power",
   "SDM.DepletedResources": "Last ammo, one remains",
@@ -547,6 +580,7 @@
   "SDM.GearStartingKit": "Starting Kit",
   "SDM.GearStartingKitRemainingItems": "Remaining Items",
   "SDM.generic-synthesized-creature": "Generic Synthesized Creature",
+  "SDM.GMDiceOracles": "Dice Oracles",
   "SDM.GMGenerateRandomNPC": "Generate Random NPC",
   "SDM.GMGiveCash": "Give/Take Cash",
   "SDM.GMGiveExperience": "Give Experience",
@@ -1025,6 +1059,7 @@
   "TYPES.Item.armor": "Armor",
   "TYPES.Item.burden": "Burden",
   "TYPES.Item.cash": "Cash",
+  "TYPES.Item.corruption": "Corruption",
   "TYPES.Item.gear": "Gear",
   "TYPES.Item.mount": "Mount",
   "TYPES.Item.power": "Power",
