--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -326,7 +326,20 @@
   "SDM.CombatantsExcluded": "Excluídos do combate: {names}",
   "SDM.ConsumeSupply": "Consumir Suprimentos",
   "SDM.ConsumeSupplyHint": "Suprimentos Semanais Requeridos",
+  "SDM.Corruption": "Corrupção",
+  "SDM.CorruptionExposureSeverity": "Gravidade da Exposição à Corrupção",
+  "SDM.CorruptionMessage11to12": "Role a tabela @UUID[Compendium.sdm.corruption.RollTable.a3v2H3P6olAzWHwS]{Corrupção Leve}",
+  "SDM.CorruptionMessage13plus": "e você recupera o preço que pagou pelo poder. Role a tabela @UUID[Compendium.sdm.corruption.RollTable.a3v2H3P6olAzWHwS]{Corrupção Leve}",
+  "SDM.CorruptionMessage2less": "A cabeça explode (ou algo igualmente memorável), mas a corrupção mantém você vivo até morrer de fome. Seu complexo mente-personalidade (ka-ba) permanece consciente durante todo o tempo.\nAlém disso, role a tabela @UUID[Compendium.sdm.corruption.RollTable.BBgSMXyZ7cPuZuCM]{Corrupção Severa}.",
+  "SDM.CorruptionMessage3to6": "Role a tabela @UUID[Compendium.sdm.corruption.RollTable.BBgSMXyZ7cPuZuCM]{Corrupção Severa}",
+  "SDM.CorruptionMessage7to10": "Role a tabela @UUID[Compendium.sdm.corruption.RollTable.grc8rMrojT8de6Ve]{Corrupção Moderada}",
+  "SDM.CorruptionOutcome11to12": "Exposição leve",
+  "SDM.CorruptionOutcome13plus": "Exposição leve",
+  "SDM.CorruptionOutcome2less": "Amplificação inesperada.",
+  "SDM.CorruptionOutcome3to6": "Exposição severa.",
+  "SDM.CorruptionOutcome7to10": "Exposição moderada.",
   "SDM.Cost": "Custo",
+  "SDM.CreateCorruptionItem": "Criar Corrupção como",
   "SDM.CreateNPC": "Criar NPC",
   "SDM.CreatePowerItem": "Criar Poder como",
   "SDM.CreateRandomNPC": "Gerador de NPC",
@@ -338,6 +351,26 @@
   "SDM.Damage": "Dano",
   "SDM.darting-dodgers": "Fugitivos Velozes",
   "SDM.DefaultAbility": "Atributo Padrão",
+  "SDM.Defeat": "Derrota",
+  "SDM.DefeatAbilityAura": "Aura (dano mental)",
+  "SDM.DefeatAbilityEndurance": "Resistência (dano físico)",
+  "SDM.DefeatMessage1": "O personagem está ausente pelo menos pelo resto desta sessão, a menos que haja intervenção de divinitecnologias estranhas.",
+  "SDM.DefeatMessage10": "Fardo de desfiguração (-1 Carisma). Perde o próximo turno, depois recupera 1 ponto de vida.",
+  "SDM.DefeatMessage11": "Perde o próximo turno, depois recupera 1 ponto de vida.",
+  "SDM.DefeatMessage12plus": "Recupere imediatamente 1 ponto de vida.",
+  "SDM.DefeatMessage2to6": "Requer intervenção de revidação para reconstruir seu corpo (ha) ou personalidade (ba).",
+  "SDM.DefeatMessage7": "Fardo de lesão cerebral (-1 Inteligência). Nos vemos no final da luta.",
+  "SDM.DefeatMessage8": "Fardo de fraqueza (-1 Força). Perde o próximo turno, depois recupera 1 ponto de vida.",
+  "SDM.DefeatMessage9": "Fardo de náusea (-1 Rapidez). Perde o próximo turno, depois recupera 1 ponto de vida.",
+  "SDM.DefeatOutcome1": "Destruído",
+  "SDM.DefeatOutcome10": "Marcado",
+  "SDM.DefeatOutcome11": "Atordoado",
+  "SDM.DefeatOutcome12plus": "Tudo bem!",
+  "SDM.DefeatOutcome2to6": "Morto",
+  "SDM.DefeatOutcome7": "Nocauteado",
+  "SDM.DefeatOutcome8": "Sem Fôlego",
+  "SDM.DefeatOutcome9": "Contundido",
+  "SDM.DefeatRoll": "Rolar Tabela de Derrota",
   "SDM.DeleteDocConfirmation": "Deletar {doc} permanentemente?",
   "SDM.DeletePower": "Deletar Poder",
   "SDM.DepletedResources": "Última bala, resta uma",
@@ -547,6 +580,7 @@
   "SDM.GearStartingKit": "Kit Inicial",
   "SDM.GearStartingKitRemainingItems": "Itens Restantes",
   "SDM.generic-synthesized-creature": "Criatura Sintetizada Genérica",
+  "SDM.GMDiceOracles": "Oráculos dos Dados",
   "SDM.GMGenerateRandomNPC": "Gerar NPC Aleatório",
   "SDM.GMGiveCash": "Distribuir/Cobrar Dinheiro",
   "SDM.GMGiveExperience": "Distribuir Experiência",
@@ -1025,6 +1059,7 @@
   "TYPES.Item.armor": "Armadura",
   "TYPES.Item.burden": "Fardo",
   "TYPES.Item.cash": "Dinheiro",
+  "TYPES.Item.corruption": "Corrupção",
   "TYPES.Item.gear": "Equipamento",
   "TYPES.Item.mount": "Montaria",
   "TYPES.Item.power": "Poder",
